<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/button_nav_menu_list"
        android:title="@string/List_button_name"
        android:icon="@drawable/list" />
    <item
        android:id="@+id/button_nav_menu_map"
        android:title="@string/Map_button_name"
        android:icon="@drawable/map" />
    <item
        android:id="@+id/button_nav_menu_calendar"
        android:title="@string/Calendar_button_name"
        android:icon="@drawable/calendar" />

    <item
        android:id="@+id/button_nav_menu_user"
        android:title="@string/User_button_name"
        android:icon="@drawable/user"/>
</menu>