<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    tools:context=".profile.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/circle_shape"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/photoToggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:singleSelection="false"
                app:selectionRequired="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLoadPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_activity_btnLoadPhoto"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/blue_500"
                    app:cornerRadius="16dp"
                    android:checkable="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDeletePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_delete_photo"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/red_500"
                    app:cornerRadius="16dp"
                    android:checkable="false" />

            </com.google.android.material.button.MaterialButtonToggleGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_activity_name" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_activity_setName"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_activity_surname" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_activity_setSurname"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_activity_sex" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/genderToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:checkedButton="@id/toggleNotSpecified">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/toggleMale"
                    style="@style/GenderButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    app:backgroundTint="@drawable/selector_male_background"
                    app:strokeColor="@color/grey_100"
                    app:strokeWidth="1dp"
                    android:textColor="@drawable/selector_male_text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/toggleFemale"
                    style="@style/GenderButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    app:backgroundTint="@drawable/selector_female_background"
                    app:strokeColor="@color/grey_100"
                    app:strokeWidth="1dp"
                    android:textColor="@drawable/selector_female_text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/toggleNotSpecified"
                    style="@style/GenderButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prefer_not_to_say"
                    app:backgroundTint="@drawable/selector_not_specified_background"
                    app:strokeColor="@color/grey_100"
                    app:strokeWidth="1dp"
                    android:textColor="@drawable/selector_not_specified_text"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_activity_age" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_activity_setAge"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_activity_description" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|top"
                android:hint="@string/profile_activity_setDescription"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_activity_tg" />

            <EditText
                android:id="@+id/etTelegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_activity_setTg"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_activity_userId" />

            <TextView
                android:id="@+id/tvUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_activity_email" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profile_activity_btnSave"
                app:backgroundTint="@color/green_700"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_bg"
        android:paddingTop="8dp"
        app:itemIconTint="@color/toolbar_icon_color"
        app:itemTextColor="@color/toolbar_icon_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>